Added product service and applied to product list page

--- a/src/app/products/product-item/product-item.component.css
+++ b/src/app/products/product-item/product-item.component.css
@@ -8,6 +8,8 @@
 
 .product-container {
     margin-top: 64px;
+    margin-left: 32px;
+    margin-right: 32px;
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
