--- a/src/app/products/product-item/product-item.component.html
+++ b/src/app/products/product-item/product-item.component.html
@@ -1,1 +1,16 @@
-<p>product-item works!</p>
+<div class="product-container">
+    <img class="product-image" src="{{ product.url }}">
+    <div><b>{{ product.name }}</b></div>
+    <div>${{product.price}}</div>
+    <form>
+		<select class="select-input form-select" aria-label="Default select example">
+			<option
+				*ngFor="let item of productCount" 
+				[value]="item"
+				[selected]="item === '1'">
+				{{ item }}
+			</option>
+		</select>
+		<input type="submit" value="Add to Cart" class="btn btn-primary" />
+    </form>
+</div>
