--- a/src/app/products/product-list/product-list.component.css
+++ b/src/app/products/product-list/product-list.component.css
@@ -2,11 +2,12 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    max-width: 1024px;
+    max-width: 80%;
     margin-bottom: 64px;
 }
 
 .product-container {
+    font-family: arial;
     display: flex;
     justify-content: center;
 }
