--- a/src/app/products/product-list/product-list.component.html
+++ b/src/app/products/product-list/product-list.component.html
@@ -1,1 +1,3 @@
-<p>product-list works!</p>
+<div class="product-container product-index">
+    <app-product-item *ngFor="let product of products" [product]="product"></app-product-item>
+</div>
