--- a/src/app/products/product-list/product-list.component.html
+++ b/src/app/products/product-list/product-list.component.html
@@ -1,3 +1,5 @@
 <div class="product-container product-index">
-    <app-product-item *ngFor="let product of products" [product]="product"></app-product-item>
+    <app-product-item *ngFor="let product of products" 
+        [product]="product" (addProduct)="addProduct($event)">    
+    </app-product-item>
 </div>
